# gmail-agent

./: .gitignore  README.md  pyproject.toml
src/gmail_agent/client/: graph.py  state.py
src/gmail_agent/server/: gmail_auth.py  mcp_server.py
src/gmail_agent/ui/: app.py
